增加博客功能，增加软件下载页面。

--- a/MsWeb/Views/Home/GoodsIndex.cshtml
+++ b/MsWeb/Views/Home/GoodsIndex.cshtml
@@ -15,11 +15,11 @@
         <p>目前只有Android版本。</p>
         <p>无需注册，大额优惠券随便领取！推广期间，1元即可成为特约用户，还可通过分享商品<font color="red">赚钱</font></p>
         <p>百分之百用户真实推荐！百分之百人工急速审核！</p>
-        <p><a class="btn btn-default" href="http://www.mingshukeji.com.cn:8080/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/SjDownload">进入下载 &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2><font color="red">招募令</font></h2>
-        <h5>安卓手机客户端刚刚上线，现招募20名特约用户，有淘宝账号，零基础即可加入！快来加入吧！</h5>
-        <p><a class="btn btn-default" href="/Home/Recriut">详细要求 &raquo;</a></p>
+        <h5>安卓手机客户端刚刚上线，现招募100名特约用户，有淘宝账号，零基础即可加入！快来加入吧！</h5>
+        <p><a class="btn btn-default" href="~/Home/Recruit">详细要求 &raquo;</a></p>
     </div>
 </div>
