--- a/MsWeb/Views/Home/Index.cshtml
+++ b/MsWeb/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="jumbotron">
     <h1>MSKJ</h1>
-    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MSKJ目前仅推出了一款安卓手机APP[<font color="red">闪荐</font>]，
+    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MSKJ目前仅推出了一款安卓手机APP[<a href="Home/GoodsIndex"><font color="red">闪荐</font></a>]
     为淘宝/天猫用户提供大量的购物优惠券！非常适合经常购物的朋友们使用！</p>
     <p class="lead">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MSKJ后续还将推出微信公众号，为广大买家提供更多优惠信息！
