--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -9,13 +9,12 @@
     @Scripts.Render("~/bundles/modernizr")
     <style type="text/css">
         html{height:100%;}
-        body{min-height:90%;margin:0;padding:0;position:relative;}
+        body{min-height:95%;margin:0;padding:0;position:relative;}
         header{background-color: #ffe4c4;}
         main{padding-top:70px; }
         footer{position:absolute;bottom:0;width:100%;height:50px;}
     </style>
 </head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <body>
     <main>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -33,7 +32,8 @@
                         <li>@Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("优惠券", "Index", "Goods", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
-                        @*<li><a href="http://blog.mingshukeji.com.cn"> 博客</a></li>*@
+                        <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
+                        <li><a href="http://www.mingshukeji.com.cn:81"> 博客</a></li>
                     </ul>
                 </div>
             </div>
