--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -11,9 +11,24 @@
         html{height:100%;}
         body{min-height:95%;margin:0;padding:0;position:relative;}
         header{background-color: #ffe4c4;}
-        main{padding-top:70px; }
+        main{padding-top:60px; padding-bottom:50px}
         footer{position:absolute;bottom:0;width:100%;height:50px;}
+        p.foot{text-align:center; height:10px; font-size:12px;} 
     </style>
+    <script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https'){
+   bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+  }
+  else{
+  bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+  }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+    </script>
 </head>
 <body>
     <main>
@@ -30,10 +45,10 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("优惠券", "Index", "Goods", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("折扣品", "Index", "Goods", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
-                        <li><a href="http://www.mingshukeji.com.cn:81"> 博客</a></li>
+                        <li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +59,15 @@
     </main>
     <footer>
         <hr />
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&copy; @DateTime.Now.Year Mingshukeji.com.cn  皖ICP备17020567</p>
+        <p class="foot">
+            友情链接：
+            <a href="http://www.baidu.com">百度</a>&nbsp;&nbsp;
+            <a href="http://www.mingshukeji.com.cn:81">MS博客</a>&nbsp;&nbsp;
+            <a href="https://s.click.taobao.com/t?e=m%3D2%26s%3DcbSc72dVoIgcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAptAI%2B2VcbmHHHfTsOG6BL5%2FnnwDmmNqHK%2FD67FE%2B0F3%2Bw%2FcV9ExfYJ2mzPzKXazMBmIkXBqRClNTcEU%2BDykfuSM%2BhtH71aX6uIOTs4KMj3yjpOyWSRdiSZDEm2YKA6YIrbIzrZDfgWtwGXLU4WXsy8CZuZoOOkzXFxfvOyje0ynomfkDJRs%2BhU%3D">阿里云</a>&nbsp;&nbsp;
+            <a href="https://wap.didialift.com/beatles/campaign/user/goldenage/invitee?regfrom=501552&inviter=8047225">滴滴顺风车</a>
+        </p>
+        <p class="foot">&nbsp;&nbsp;&nbsp;&nbsp;Copyright &copy; @DateTime.Now.Year- Mingshukeji.com.cn&nbsp;&nbsp;皖ICP备17020567号
+        </p>
     </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
