增加优惠券获取界面

--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("优惠券", "Index", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("折扣品", "Index", "Goods", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
