--- a/MsWeb/Views/Goods/Index.cshtml
+++ b/MsWeb/Views/Goods/Index.cshtml
@@ -7,6 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <title>折扣品</title>
     <style>
         body{ text-align:center} 
         #div_center{margin:0 auto} 
@@ -46,12 +47,8 @@
         $(".btnSearch").on('click', function () {
             var input = $('.inputSearch').val();
             $.getJSON("/Goods/GetGoods?q=" + input ).success(function (data) {
-                //console.log(data)
-                //$("#tbk_item_get_response").result
-                //console.log(data.tbk_item_get_response.resut.n_tbk_item)
                 $(".main").html("")
                 $.each(data.tbk_item_get_response.results.n_tbk_item, function (i, item) {
-                    //console.log(item.title);
                     $(".main").append("<div class='col-md-3'>"
                         + "<p><a href='" + item.item_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
                         + "<p width='280'>" + item.title + "</p>"
@@ -62,24 +59,20 @@
                 });
             })
         })
-        //$(document).ready(
-            //$.getJSON("/Goods/GetGoods").success(function (data) {  
-            //    //console.log(data)
-            //    //$("#tbk_item_get_response").result
-            //    //console.log(data.tbk_item_get_response.resut.n_tbk_item)
-            //    $.each(data.tbk_item_get_response.results.n_tbk_item, function (i, item) {
-            //        //console.log(item.title);
-
-            //        $("main").append("<div class='col-md-3'>"
-            //            + "<p><a href='" + item.item_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
-            //            + "<p width='280'>" + item.title + "</p>"
-            //            + "<p> 原价:<s>￥" + item.reserve_price + "</s>&nbsp;&nbsp;&nbsp;&nbsp;"
-            //            + "折后价:<font color='red'>￥" + item.zk_final_price + "</font></p>"
-            //            + "<p><a class='btn btn-default' href='" + item.item_url + "'>点击进入购买</a></p>"
-            //            + "</div>");
-            //    });
-            //})
-        //)
+        $(document).ready(
+            $.getJSON("/Goods/GetGoods").success(function (data) {
+                $(".main").html("")
+                $.each(data.tbk_item_get_response.results.n_tbk_item, function (i, item) {
+                    $("main").append("<div class='col-md-3'>"
+                        + "<p><a href='" + item.item_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
+                        + "<p width='280'>" + item.title + "</p>"
+                        + "<p> 原价:<s>￥" + item.reserve_price + "</s>&nbsp;&nbsp;&nbsp;&nbsp;"
+                        + "折后价:<font color='red'>￥" + item.zk_final_price + "</font></p>"
+                        + "<p><a class='btn btn-default' href='" + item.item_url + "'>点击进入购买</a></p>"
+                        + "</div>");
+                });
+            })
+        )
     </script>
 </body> 
 </html>
