--- a/MsWeb/Views/Coupon/Index.cshtml
+++ b/MsWeb/Views/Coupon/Index.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>优惠券</title>
+    <title>粉丝福利券</title>
     <style>
         body{ text-align:center} 
         #div_center{margin:0 auto} 
@@ -17,19 +17,7 @@
 <body>
     <div>
         <div id="div_center">
-            @*搜索框*@
-            <form align:center>
-                <input type="text" class="inputSearch" />
-                <input type="button" value="搜索" class="btnSearch" />
-            </form>
-            <p></p>
-            @*<p>
-                当前页数:
-                @for (int i = 1; i <= 10; i++)
-                {
-                    <a href="">@i</a>
-                }
-            </p>*@
+            <p>报错了？</p>
         </div>
         <div class="main">
             @*<div class="col-md-3">
@@ -44,34 +32,18 @@
 
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script>
-        $(".btnSearch").on('click', function () {
-            var input = $('.inputSearch').val();
-            $.getJSON("/Coupon/GetCoupons?q="+input).success(function (data) {
+        $.getJSON("/Coupon/GetCouponsIndex").success(function (datas) {
                 $(".main").html("")
-                $.each(data.tbk_dg_item_coupon_get_response.results.tbk_coupon, function (i, item) {
+                $.each(datas.data, function (i, item) {
                     $(".main").append("<div class='col-md-3'>"
-                        + "<p><a href='" + item.coupon_click_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
-                    + "<p width='280'>" + item.title + "</p>"
-                    + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
-                    + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a></p>"
+                        + "<p><a href='" + item.link + "'><img src='" + item.image + "' width='280' height='200'/></a></p>"
+                    + "<p width='280'>" + item.description + "</p>"
+                    + "<p>现价：<font color='red'>" + item.price + "</font>&nbsp;&nbsp;<s>原价：" + item.oldprice + "</s></p>"
+                    + "<p>推荐时间:<font color='blue'>" + item.recommendtime + "</font></p>"
+                    + "<p><a class='btn btn-default' href='" + item.link + "'>点击领取优惠券</a></p>"
                     + "</div>");
                 });
             })
-        })
-        @*首次进入加载默认*@
-        $.getJSON("/Coupon/GetCoupons").success(function (data) {
-            $(".main").html("")
-            $.each(data.tbk_dg_item_coupon_get_response.results.tbk_coupon, function (i, item) {
-                $(".main").append("<div class='col-md-3'>"
-                    + "<p><a href='" + item.coupon_click_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
-                    + "<p width='280'>" + item.title + "</p>"
-                    + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
-                    + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a></p>"
-                    + "</div>");
-            });
-        })
     </script>
 </body> 
 </html>
