--- a/MsWeb/Views/Home/SjDownload.cshtml
+++ b/MsWeb/Views/Home/SjDownload.cshtml
@@ -17,7 +17,10 @@
         用户可以根据自己的需求进行选择领取优惠券。
         </p>
         <p> <a class="btn btn-default" href="http://www.mingshukeji.com.cn:8080/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
-        <h4>当前版本号为：<font color="red">1.0.0</font>,首次发布版本。</h4>
+        <h4>当前版本号为：<font color="red">1.1.0</font></h4>
+<h6><p>2017-09-21  增加粉丝福利、发现界面，粉丝福利是专门给用户搜索粉丝福利券，发现界面目前只增加了移动网赚模块，后续会持续丰富，欢迎大家提出建议！
+      修复了一些BUG，美化了一些界面！</p>
+<p>2017-09-04  首次发布，功能包含欢迎页、导航页、注册、登录、查看商品、上传商品、审核商品、一件购买。</p></h6>
     </div>
     <div class="row">
         <div class="col-md-3">
