--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -45,8 +45,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("优惠券", "Index", "Coupon", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("折扣品", "Index", "Goods", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("粉丝福利券", "Index", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
                         <li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>
