增加数据库访问，增加数据控制器

--- a/MsWeb/Views/Coupon/FindCoupon.cshtml
+++ b/MsWeb/Views/Coupon/FindCoupon.cshtml
@@ -21,6 +21,7 @@
             <form align:center>
                 <input type="text" class="inputSearch" />
                 <input type="button" value="搜索" class="btnSearch" />
+                <a href="/Coupon"><input type="button" value="返回推荐" /></a>
             </form>
             <p></p>
             @*<p>
