--- a/MsWeb/Views/Coupon/Index.cshtml
+++ b/MsWeb/Views/Coupon/Index.cshtml
@@ -37,9 +37,9 @@
 
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script>
-        $.getJSON("/api/RecommandGoods/GetRecommandGoodsList?curPage=0&pageSize=10&type=2&filter=").success(function (data) {
+        $.getJSON("/api/RecommandGoods/GetRecommandGoodsList?curPage=0&pageSize=20&type=2&filter=").success(function (data) {
                 $(".main").html("")
-                $.each(data.data, function (i, item) {
+                $.each(data.data.DataList, function (i, item) {
                     $(".main").append("<div class='col-md-3'>"
                         + "<p><a href='" + item.link + "'><img src='" + item.image + "' width='280' height='200'/></a></p>"
                     + "<p width='280'>" + item.description + "</p>"
