--- a/MsWeb/Views/Home/SoftDownload.cshtml
+++ b/MsWeb/Views/Home/SoftDownload.cshtml
@@ -13,17 +13,17 @@
     <div class="row">
         <div class="col-md-3">
             <a href="~/Home/SjDownload">
-                <img src="/img/softicon/sj_icon.png" width="94" height="94" /></a>
+                <img src="/images/softicon/sj_icon.png" width="94" height="94" /></a>
             <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;闪荐</h4>
             <p><a class="btn btn-default" href="~/Home/SjDownload">进入下载 &raquo;</a></p>
         </div>
 
         <div class="col-md-3">
             <a href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">
-                <img src="/img/softicon/tblm_icon.png" width="94" height="94" />
+                <img src="/images/softicon/tblm_icon.png" width="94" height="94" />
             </a>
             <h4>&nbsp;&nbsp;淘宝联盟</h4>
-            <p><a class="btn btn-default" href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">进入下载 &raquo;</a></p>
+            <p><a class="btn btn-default" target="_blank" href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">进入下载 &raquo;</a></p>
         </div>
     </div>
 </body>
