--- a/MsWeb/Views/Home/SjDownload.cshtml
+++ b/MsWeb/Views/Home/SjDownload.cshtml
@@ -16,7 +16,7 @@
         商品推荐到闪荐中，并说明推荐理由以及自用或购买的证据（防刷单），通过人工审核后，即可展现在用户面前。
         用户可以根据自己的需求进行选择领取优惠券。
         </p>
-        <p> <a class="btn btn-default" href="http://www.mingshukeji.com.cn:8080/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
+        <p> <a class="btn btn-default" target="_blank" href="http://www.mingshukeji.com.cn/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
         <h4>当前版本号为：<font color="red">1.1.0</font></h4>
 <h6><p>2017-09-21  增加粉丝福利、发现界面，粉丝福利是专门给用户搜索粉丝福利券，发现界面目前只增加了移动网赚模块，后续会持续丰富，欢迎大家提出建议！
       修复了一些BUG，美化了一些界面！</p>
@@ -24,16 +24,16 @@
     </div>
     <div class="row">
         <div class="col-md-3">
-            <img src="/img/sj_guides/image_guide_1.png" class="img-rounded" width="250" height="444" />
+            <img src="/images/sj_guides/image_guide_1.png" class="img-rounded" width="250" height="444" />
         </div>
         <div class="col-md-3">
-            <img src="/img/sj_guides/image_guide_2.png" class="img-rounded" width="250" height="444" />
+            <img src="/images/sj_guides/image_guide_2.png" class="img-rounded" width="250" height="444" />
         </div>
         <div class="col-md-3">
-            <img src="/img/sj_guides/image_guide_3.png" class="img-rounded" width="250" height="444" />
+            <img src="/images/sj_guides/image_guide_3.png" class="img-rounded" width="250" height="444" />
         </div>
         <div class="col-md-3">
-            <img src="/img/sj_guides/image_guide_4.png" class="img-rounded" width="250" height="444" />
+            <img src="/images/sj_guides/image_guide_4.png" class="img-rounded" width="250" height="444" />
         </div>
     </div>
 </body>
