--- a/MsWeb/Views/Coupon/FindCoupon.cshtml
+++ b/MsWeb/Views/Coupon/FindCoupon.cshtml
@@ -6,15 +6,29 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
     <title>粉丝福利券</title>
-    <style>
-        body{ text-align:center} 
-        #div_center{margin:0 auto} 
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="~/Scripts/qrcode.js"></script>
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        body{
+             text-align:center
+        } 
+        #div_center{
+            margin:0 auto
+        } 
     </style>
-
 </head>
 <body>
+    <div class="dialog">
+        <div id="qrcodeImg" class="img"></div>
+        <div class="textd">
+            <p class="tips-opentaobao">打开手机淘宝，扫描二维码即可领取优惠券。</p>
+            <p id="pHide">点击任意地方消失,30秒后自动隐藏！</p>
+        </div>
+    </div>  
     <div>
         <div id="div_center">
             @*搜索框*@
@@ -45,6 +59,25 @@
 
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script>
+        var x = 30;
+        var qrcodeImg = new QRCode(document.getElementById("qrcodeImg"), {
+            width: 300,
+            height: 300,
+        });
+        function go() {
+            if ($(".dialog").is(":visible")) {
+                x--;
+                if (x >= 0) {
+                    document.getElementById("pHide").innerHTML = "点击任意地方消失," + x + "秒后自动消失！";
+                } else {
+                    $(".dialog").hide();
+                    x = 30;
+                }
+            }
+        }
+        onload = function () {
+            setInterval(go, 1000);
+        }
         $(".btnSearch").on('click', function () {
             var input = $('.inputSearch').val();
             $.getJSON("/api/Tbk/GetCouponList?q=" + input + "&pageNo=1&pageSize=24").success(function (data) {
@@ -55,7 +88,7 @@
                     + "<p width='280'>" + item.title + "</p>"
                     + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
                     + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a></p>"
+                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
                     + "</div>");
                 });
             })
@@ -69,9 +102,21 @@
                     + "<p width='280'>" + item.title + "</p>"
                     + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
                     + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a></p>"
+                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
                     + "</div>");
             });
+            $('.btnQ').on('click', function (e) {
+                //JS生成二维码，并且显示在悬浮DIV中
+                var goodsLink = $(this).attr('data_link');
+                qrcodeImg.makeCode(goodsLink);
+
+                document.getElementById("pHide").innerHTML = "点击任意地方消失,30秒后自动消失！"
+                $(".dialog").show();
+            })
+        })
+        $('.dialog').on('click', function (e) {
+            $(".dialog").hide();
+            x = 30;
         })
     </script>
 </body> 
