--- a/MsWeb/Views/Coupon/Index.cshtml
+++ b/MsWeb/Views/Coupon/Index.cshtml
@@ -6,10 +6,12 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
     <title>粉丝福利券</title>
-
-    <style>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <script type="text/javascript" src="~/Scripts/qrcode.js"></script>
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
         body {
             text-align: center;
         }
@@ -20,6 +22,13 @@
     </style>
 </head>
 <body>
+    <div class="dialog">
+        <div id="qrcodeImg" class="img"></div>
+        <div class="textd">
+            <p class="tips-opentaobao">打开手机淘宝，扫描二维码即可领取优惠券。</p>
+            <p id="pHide">点击任意地方消失,30秒后自动隐藏！</p>
+        </div>
+    </div>  
     <div>
         <div>
             <p><h4>想自己去找券？<a href="/Coupon/FindCoupon">点击这里</a></h4></p>
@@ -34,21 +43,53 @@
                 </div>*@
         </div>
     </div>
-
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script>
+    <script type="text/javascript">
+        var x = 30;
+        var qrcodeImg = new QRCode(document.getElementById("qrcodeImg"), {
+            width: 300,
+            height: 300,
+        });
+        function go() {
+            if ($(".dialog").is(":visible"))
+            {
+                x--;
+                if (x >= 0) {
+                    document.getElementById("pHide").innerHTML = "点击任意地方消失," + x + "秒后自动消失！";
+                } else {
+                    $(".dialog").hide();
+                    x = 30;
+                }
+            }
+        }
+        onload = function () {
+            setInterval(go, 1000);
+        }
         $.getJSON("/api/RecommandGoods/GetRecommandGoodsList?curPage=0&pageSize=20&type=2&filter=").success(function (data) {
                 $(".main").html("")
                 $.each(data.data.DataList, function (i, item) {
-                    $(".main").append("<div class='col-md-3'>"
-                        + "<p><a href='" + item.link + "'><img src='" + item.image + "' width='280' height='200'/></a></p>"
+                    $(".main").append("<div class='col-md-3 parentDiv'>"
+                        + "<p><a class='linkA' href='" + item.link + "'><img src='" + item.image + "' width='280' height='200'/></a></p>"
                     + "<p width='280'>" + item.description + "</p>"
                     + "<p>现价：<font color='red'>" + item.price + "</font>&nbsp;&nbsp;<s>原价：" + item.oldprice + "</s></p>"
                     + "<p>推荐时间:<font color='blue'>" + item.recommendtime + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.link + "'>点击领取优惠券</a></p>"
+                    + "<p><a class='btn btn-default' href='" + item.link + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' img_link='" + item.image + "' data_link='" + item.link + "'>显示二维码</a></p>"
                     + "<br></div>");
+                    
                 });
-            })
+                $('.btnQ').on('click', function (e) {
+                    //JS生成二维码，并且显示在悬浮DIV中
+                    var goodsLink = $(this).attr('data_link');
+                    qrcodeImg.makeCode(goodsLink);
+
+                    document.getElementById("pHide").innerHTML = "点击任意地方消失,30秒后自动消失！"
+                    $(".dialog").show();
+                })
+        })
+        $('.dialog').on('click', function (e) {
+            $(".dialog").hide();
+            x = 30;
+        })
+
     </script>
 </body> 
 </html>
