--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery.cookie.js"></script>
+    <link href="~/Content/style.css" type="text/css" rel="stylesheet"/>
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -16,22 +19,42 @@
         p.foot{text-align:center; height:10px; font-size:12px;} 
     </style>
     <script>
-(function(){
-    var bp = document.createElement('script');
-    var curProtocol = window.location.protocol.split(':')[0];
-    if (curProtocol === 'https'){
-   bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-  }
-  else{
-  bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-  }
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(bp, s);
-})();
+        (function(){
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https'){
+           bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+          }
+          else{
+          bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+          }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
     </script>
 </head>
 <body>
     <main>
+        <div class="wechatButton">
+            <img src="~/images/wechat/mskjvip888_258.jpg"/>
+        </div>
+        <div class="wechatNumber">
+            <img src="~/images/wechat/mskjvip888_258.jpg" />
+            <p>扫码关注微信公众号<a class="hideWechatNumber">关闭</a></p>
+        </div>
+
+        <script type="text/javascript">
+            $('.wechatButton').on('click', function () {
+                $('.wechatNumber').show();
+            })
+            $('.wechatNumber').on('click', function () {
+                $('.wechatNumber').hide();
+            })
+            $('.hideWechatNumber').on('click', function () {
+                $('.wechatNumber').hide();
+            })
+        </script>
+
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -45,17 +68,32 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("粉丝福利券", "Index", "Coupon", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("推荐商品", "Index", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
+                        <li>@Html.ActionLink("更新日志", "UpdateLog", "Home", new { area = "" }, null)</li>
                         <li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="container body-content">
+            <div class="status-login-register">
+                <a href="/Home/Register">注册</a>&nbsp;&nbsp;<a href="/Home/Login">登录</a>
+            </div>
             @RenderBody()
         </div>
+        <script type="text/javascript">
+            function userExit() {
+                delCookie("userid","/");
+                location.href = "/Home";
+            }
+
+            var userid = getCookie('userid');
+            if (userid != null && userid != "") {
+                $(".status-login-register").html("<p><a href=''>" + userid + "</a>，欢迎您！  <a onclick='userExit()' href='#'>退出</a></p>");
+            }
+        </script>
     </main>
     <footer>
         <hr />
