--- a/MsWeb/Views/Coupon/FindCoupon.cshtml
+++ b/MsWeb/Views/Coupon/FindCoupon.cshtml
@@ -13,111 +13,114 @@
     <script type="text/javascript" src="~/Scripts/qrcode.js"></script>
     <link href="~/Content/style.css" rel="stylesheet" type="text/css">
     <style type="text/css">
-        body{
-             text-align:center
-        } 
+        .body-center {
+            text-align: center;
+        }
+
         #div_center{
             margin:0 auto
         } 
     </style>
 </head>
 <body>
-    <div class="dialog">
-        <div id="qrcodeImg" class="img"></div>
-        <div class="textd">
-            <p class="tips-opentaobao">打开手机淘宝，扫描二维码即可领取优惠券。</p>
-            <p id="pHide">点击任意地方消失,30秒后自动隐藏！</p>
+    <div class="body-center">
+        <div class="dialog">
+            <div id="qrcodeImg" class="img"></div>
+            <div class="textd">
+                <p class="tips-opentaobao">打开手机淘宝，扫描二维码即可领取优惠券。</p>
+                <p id="pHide">点击任意地方消失,30秒后自动隐藏！</p>
+            </div>
         </div>
-    </div>  
-    <div>
-        <div id="div_center">
-            @*搜索框*@
-            <form align:center>
-                <input type="text" class="inputSearch" />
-                <input type="button" value="搜索" class="btnSearch" />
-                <a href="/Coupon"><input type="button" value="返回推荐" /></a>
-            </form>
-            <p></p>
-            @*<p>
-                当前页数:
-                @for (int i = 1; i <= 10; i++)
-                {
-                    <a href="">@i</a>
-                }
-            </p>*@
+        <div>
+            <div id="div_center">
+                @*搜索框*@
+                <form align:center>
+                    <input type="text" class="inputSearch" />
+                    <input type="button" value="搜索" class="btnSearch" />
+                    <a href="/Coupon"><input type="button" value="返回推荐" /></a>
+                </form>
+                <p></p>
+                @*<p>
+                        当前页数:
+                        @for (int i = 1; i <= 10; i++)
+                        {
+                            <a href="">@i</a>
+                        }
+                    </p>*@
+            </div>
+            <div class="main">
+                @*<div class="col-md-3">
+                        <a href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">
+                            <img src="/img/softicon/tblm_icon.png" width="94" height="94" />
+                        </a>
+                        <h4>&nbsp;&nbsp;淘宝联盟</h4>
+                        <p><a class="btn btn-default" href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">进入下载 &raquo;</a></p>
+                    </div>*@
+            </div>
         </div>
-        <div class="main">
-            @*<div class="col-md-3">
-                    <a href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">
-                        <img src="/img/softicon/tblm_icon.png" width="94" height="94" />
-                    </a>
-                    <h4>&nbsp;&nbsp;淘宝联盟</h4>
-                    <p><a class="btn btn-default" href="http://sj.qq.com/myapp/detail.htm?apkName=com.alimama.moon">进入下载 &raquo;</a></p>
-                </div>*@
-        </div>
-    </div>
 
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script>
-        var x = 30;
-        var qrcodeImg = new QRCode(document.getElementById("qrcodeImg"), {
-            width: 300,
-            height: 300,
-        });
-        function go() {
-            if ($(".dialog").is(":visible")) {
-                x--;
-                if (x >= 0) {
-                    document.getElementById("pHide").innerHTML = "点击任意地方消失," + x + "秒后自动消失！";
-                } else {
-                    $(".dialog").hide();
-                    x = 30;
+        <script src="~/Scripts/jquery-1.10.2.js"></script>
+        <script>
+            var x = 30;
+            var qrcodeImg = new QRCode(document.getElementById("qrcodeImg"), {
+                width: 300,
+                height: 300,
+            });
+            function go() {
+                if ($(".dialog").is(":visible")) {
+                    x--;
+                    if (x >= 0) {
+                        document.getElementById("pHide").innerHTML = "点击任意地方消失," + x + "秒后自动消失！";
+                    } else {
+                        $(".dialog").hide();
+                        x = 30;
+                    }
                 }
             }
-        }
-        onload = function () {
-            setInterval(go, 1000);
-        }
-        $(".btnSearch").on('click', function () {
-            var input = $('.inputSearch').val();
-            $.getJSON("/api/Tbk/GetCouponList?q=" + input + "&pageNo=1&pageSize=24").success(function (data) {
+            onload = function () {
+                setInterval(go, 1000);
+            }
+            $(".btnSearch").on('click', function () {
+                var input = $('.inputSearch').val();
+                $.getJSON("/api/Tbk/GetCouponList?q=" + input + "&pageNo=1&pageSize=24").success(function (data) {
+                    $(".main").html("")
+                    $.each(data.data, function (i, item) {
+                        $(".main").append("<div class='col-md-3'>"
+                            + "<p><a href='" + item.coupon_click_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
+                        + "<p width='280'>" + item.title + "</p>"
+                        + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
+                        + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
+                        + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
+                        + "</div>");
+                    });
+                })
+            })
+            @*首次进入加载默认*@
+            $.getJSON("/api/Tbk/GetCouponList?q=&pageNo=1&pageSize=24").success(function (data) {
                 $(".main").html("")
                 $.each(data.data, function (i, item) {
                     $(".main").append("<div class='col-md-3'>"
                         + "<p><a href='" + item.coupon_click_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
-                    + "<p width='280'>" + item.title + "</p>"
-                    + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
-                    + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
-                    + "</div>");
+                        + "<p width='280'>" + item.title + "</p>"
+                        + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
+                        + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
+                        + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
+                        + "</div>");
                 });
-            })
-        })
-        @*首次进入加载默认*@
-        $.getJSON("/api/Tbk/GetCouponList?q=&pageNo=1&pageSize=24").success(function (data) {
-            $(".main").html("")
-            $.each(data.data, function (i, item) {
-                $(".main").append("<div class='col-md-3'>"
-                    + "<p><a href='" + item.coupon_click_url + "'><img src='" + item.pict_url + "' width='280' height='200'/></a></p>"
-                    + "<p width='280'>" + item.title + "</p>"
-                    + "<p> <font color='red'>" + item.coupon_info + "</font>&nbsp;&nbsp;(" + item.coupon_remain_count + "//" + item.coupon_total_count + ")</p>"
-                    + "<p>结束时间:<font color='blue'>" + item.coupon_end_time + "</font></p>"
-                    + "<p><a class='btn btn-default' href='" + item.coupon_click_url + "'>点击领取优惠券</a>&nbsp;&nbsp;<a class='btn btn-default btnQ' data_link='" + item.coupon_click_url + "'>显示二维码</a></p>"
-                    + "</div>");
-            });
-            $('.btnQ').on('click', function (e) {
-                //JS生成二维码，并且显示在悬浮DIV中
-                var goodsLink = $(this).attr('data_link');
-                qrcodeImg.makeCode(goodsLink);
+                $('.btnQ').on('click', function (e) {
+                    //JS生成二维码，并且显示在悬浮DIV中
+                    var goodsLink = $(this).attr('data_link');
+                    qrcodeImg.makeCode(goodsLink);
 
-                document.getElementById("pHide").innerHTML = "点击任意地方消失,30秒后自动消失！"
-                $(".dialog").show();
+                    document.getElementById("pHide").innerHTML = "点击任意地方消失,30秒后自动消失！"
+                    $(".dialog").show();
+                })
             })
-        })
-        $('.dialog').on('click', function (e) {
-            $(".dialog").hide();
-            x = 30;
-        })
-    </script>
+            $('.dialog').on('click', function (e) {
+                $(".dialog").hide();
+                x = 30;
+            })
+        </script>
+    </div>
 </body> 
 </html>
