--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -12,13 +12,18 @@
         <th width="80">更新人员</th>
     </tr>
     <tr>
+        <td>2017年10月20日</td>
+        <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。</td>
+        <td align="center">Lisx24</td>
+    </tr>
+    <tr>
         <td>2017年10月19日</td>
         <td>增加网站更新日志功能</td>
         <td align="center">Lisx24</td>
     </tr>
     <tr>
         <td>2017年10月18日</td>
-        <td>增加网页浏览商品时生成二维码，供用户直接用手机淘宝扫描二维码获取优惠券信息。右上角增加微信公众号二维码</td>
+        <td>增加网页浏览商品时生成二维码，供用户直接用手机淘宝扫描二维码获取优惠券信息。右上角增加微信公众号二维码。</td>
         <td align="center">Lisx24</td>
     </tr>
     <tr>
