--- a/MsWeb/Views/Home/Register.cshtml
+++ b/MsWeb/Views/Home/Register.cshtml
@@ -24,12 +24,17 @@
                 <input type="checkbox" id="chkAgreeProtocol" onclick="checkboxOnclick(this)"> 同意<a href="http://www.baidu.com" target="_blank">用户协议</a>
             </label>
         </div>
-        <button type="submit" class="btn btn-default btn-register" style="width:100px;">注册</button>
+        <button type="submit" class="btn btn-default btn-register" style="width:100px;" onclick="return regist()">注册</button>
         <button type="button" class="btn btn-default btn-reset pull-right" style="width:100px;">重置</button>
     </form>
 </div>
 
 <script type="text/javascript">
+    var isLogin = getCookie('isLogin');
+    if (isLogin == "true") {
+        location.href = "/Home";
+    }
+
     $('.btn-register').attr('disabled', true);
     function checkboxOnclick(checkbox) {
         if (checkbox.checked == true) {
@@ -38,7 +43,7 @@
             $('.btn-register').attr('disabled', true);
         }
     }
-    $(".btn-register").click(function () {
+    function regist() {
         var password = $('#txtPassword').val();
         var confirmPassword = $('#txtConfirmPassword').val();
         if (password != confirmPassword) {
@@ -56,14 +61,18 @@
                 success: function (rst) {
                     if (rst.code > 0) {
                         alert("注册成功");
+                        localStorage.userid = rst.data.userid;
+                        document.write(localStorage.userid);
+                        setCookie("isLogin", true, 10, '/');
+                        location.href = "/Home";
                     } else {
                         alert(rst.message);
                     }
                 }
             });
         }
-
-    })
+        return false;
+    }
 </script>
 
 
