--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 
             var isLogin = getCookie('isLogin');
             if (isLogin == "true") {
-                $(".status-login-register").html("<p>&nbsp;&nbsp;<a href=''>" + localStorage.userid + "</a>，欢迎您！  <a onclick='userExit()' href='#'>退出</a></p>");
+                $(".status-login-register").html("<p>&nbsp;&nbsp;<a href=''>" + localStorage.username + "</a>，欢迎您！  <a onclick='userExit()' href='#'>退出</a></p>");
             }
         </script>
     </main>
