--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -1,6 +1,5 @@
 ﻿
 @{
-    ViewBag.Title = "网站更新日志";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,7 +12,7 @@
     </tr>
     <tr>
         <td>2017年10月20日</td>
-        <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。</td>
+        <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。增加帮助中心功能。</td>
         <td align="center">Lisx24</td>
     </tr>
     <tr>
