--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
                         <li>@Html.ActionLink("上传商品", "UploadCoupon", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("软件下载","SoftDownload" ,"Home",new { area = ""},null)</li>
+                        <li>@Html.ActionLink("帮助中心", "Index", "Help", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("更新日志", "UpdateLog", "Home", new { area = "" }, null)</li>
                         <li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>
                     </ul>
