--- a/MsWeb/Content/style-H5.css
+++ b/MsWeb/Content/style-H5.css
@@ -6,7 +6,7 @@ a,a:hover{ color:#333; text-decoration:none;}
 ul, ol{ list-style:none;}
 fieldset, img{ border:0;}
 button, input, select, textarea { font-size:100%; font-family:inherit; outline:none;}
-body{ background-color:#FFF;
+.body-style-h5{ background-color:#FFF;
     margin: 0 auto;
     font-size: 14px;
     font-family: Helvetica,'STHeiti STXihei', 'Microsoft JhengHei', 'Microsoft YaHei', Arial;
