--- a/MsWeb/Views/Home/Register.cshtml
+++ b/MsWeb/Views/Home/Register.cshtml
@@ -1,9 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "注册-MSKJ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container"  style="width:300px;margin:0 auto;background-color:antiquewhite;height:400px;border-radius:10px">
+<div class="container"  style="width:300px;margin:0 auto;background-color:antiquewhite;height:380px;border-radius:10px">
     <h2 class="text-center">新用户注册</h2>
     <form>
         <div class="form-group">
@@ -18,7 +17,15 @@
             <label for="exampleInputPassword1">确认密码</label>
             <input type="password" class="form-control" id="txtConfirmPassword" placeholder="确认密码">
         </div>
-
+        @*<div class="form-group">
+            <label for="exampleInputEmail1">手机号</label>
+            <input type="text" class="form-control" id="txtMobileNo" placeholder="手机号">
+            <button type="button" id="btnVerificationCode" onclick="return sendMessageVerificationCode()">发送验证码</button> 
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">验证码</label>
+            <input type="text" class="form-control" id="txtUserCode" placeholder="验证码">
+        </div>*@
         <div class="checkbox">
             <label>
                 <input type="checkbox" id="chkAgreeProtocol" onclick="checkboxOnclick(this)"> 同意<a href="http://www.baidu.com" target="_blank">用户协议</a>
@@ -43,10 +50,37 @@
             $('.btn-register').attr('disabled', true);
         }
     }
+    function sendMessageVerificationCode()
+    {
+        if ($("#txtMobileNo").val().length == 11) {
+            var data = {
+                mobileNo: $("#txtMobileNo").val()
+            }
+
+            $.ajax({
+                url: "/api/Users/GetVerificationCode",
+                type: "get",
+                data: data,
+                success: function (rst) {
+                    if (rst.code > 0) {
+                        alert("验证码:"+rst.data);
+                    } else {
+                        alert(rst.message);
+                    }
+                }
+            });
+        }
+        else {
+            alert("请先输入正确的手机号!");
+        }
+    }
+
     function regist() {
         var password = $('#txtPassword').val();
         var confirmPassword = $('#txtConfirmPassword').val();
-        if (password != confirmPassword) {
+        if ($("#txtUserCode").val() == "" || password == "" || confirmPassword == "") {
+            alert("请先输入完整的注册信息！");
+        }else if (password != confirmPassword) {
             alert("两次输入的密码不一致，请检查！");
         } else {
             var data = {
